--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -1,50 +1,62 @@
 .container
 
-    .topbar
-        background: rgb(255, 255, 106)
-        padding: 10px
-
-        .toggle_btn
-            font-size: 2em
-            letter-spacing: .1em
-            font-weight: 700
-            font-family: sans-serif
-            position: absolute
-            transform: rotate(90deg)
-            transition: transform .3s
-            padding: 0px 5px
-
-        .toggle_btn:hover
-            transform: rotate(0deg)
-            transition: transform .3s
-
-        .myname
-            font-size: 2em
-            text-align: center
-            font-weight: 700
-            font-family: sans-serif
-
     .main
 
         .about, .skills
 
-            padding: 20px 10px
+            height: 100vh
+            padding: 20px
+
             font-size: 2em
-            font-family: 'Times New Roman', Times, serif
+            font-family: sans-serif
+            font-weight: 600
+
+            display: flex
+            flex-direction: column
+            justify-content: center
 
         .about
 
             text-align: center
 
+            .header
+                font-size: 200%
+                font-family: sans-serif
+                font-weight: 600
+                padding: 20px
+                color: rgb(104, 104, 255)
+
         .skills
 
-            width: 100vw
-            border: 1px solid black
+            width: 100%
+
+            display: grid
+            grid-template-columns: repeat(1, 1fr)
+            justify-items: center
+            align-items: center
 
             img
-                object-fit: cover
+
+                width: 55%
                 background-position: center
                 background-size: cover
 
     .footer
-        padding: 10px
+        height: 100vh
+        padding: 0px
+
+        display: flex
+        flex-direction: column
+
+        justify-content: center
+        align-items: center
+
+        .fb, .insta
+
+            padding: 10px
+            text-decoration: none
+            color: black
+
+            font-size: 110%
+            font-family: sans-serif
+            font-weight: 700
