--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -37,7 +37,8 @@
 
             img
 
-                width: 55%
+                height: 50%
+                width: auto
                 background-position: center
                 background-size: cover
 
