--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -2,25 +2,55 @@
 
     .main
 
-        .about, .skills
+        padding: 0px 20px
 
-            height: 100vh
-            padding: 20px
+        font-size: 2em
+        font-family: sans-serif
+        font-weight: 600
 
-            font-size: 2em
-            font-family: sans-serif
-            font-weight: 600
-
-            display: flex
-            flex-direction: column
-            justify-content: center
+        display: flex
+        flex-direction: column
+        justify-content: center
 
         .about
 
             text-align: center
 
+            .intro
+
+                display: flex
+                flex-direction: column
+                justify-content: space-evenly
+                align-items: center
+                gap: 5px
+
+                .dipak
+                    border-radius: 50%
+                    width: 8rem
+                    height: 8rem
+
+                .my_name_wrapper
+
+                    display: flex
+                    flex-direction: row
+                    justify-content: center
+                    align-items: center
+
+                    .my_name
+
+                        display: flex
+                        flex-direction: row
+                        align-items: center
+                        padding: 10px
+
+                    .varified_badge
+
+                        width: 2rem
+                        height: 2rem
+                        color: blue
+
             .header
-                font-size: 200%
+                font-size: 150%
                 font-family: sans-serif
                 font-weight: 600
                 padding: 20px
@@ -43,11 +73,11 @@
                 background-size: cover
 
     .footer
-        height: 100vh
-        padding: 0px
+
+        padding: 2rem 0px
 
         display: flex
-        flex-direction: column
+        flex-direction: row
 
         justify-content: center
         align-items: center
@@ -58,6 +88,10 @@
             text-decoration: none
             color: black
 
-            font-size: 110%
+            font-size: 100%
             font-family: sans-serif
             font-weight: 700
+
+            svg
+                height: 2rem
+                width: 2rem
