--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -1,4 +1,10 @@
+$text-color: white
+$bright-green: #85ff55
+
 .container
+
+    background: #333333
+    color: $text-color
 
     .main
 
@@ -14,6 +20,8 @@
 
         .about
 
+            padding: 15% 0px
+
             text-align: center
 
             .intro
@@ -26,8 +34,6 @@
 
                 .dipak
                     border-radius: 50%
-                    width: 8rem
-                    height: 8rem
 
                 .my_name_wrapper
 
@@ -45,36 +51,37 @@
 
                     .varified_badge
 
-                        width: 2rem
-                        height: 2rem
                         color: blue
 
             .header
                 font-size: 150%
                 font-family: sans-serif
                 font-weight: 600
-                padding: 20px
-                color: rgb(104, 104, 255)
+                padding: 25px 0px
+                color: $bright-green
+
+            .bio
+                font-size: .5em
 
         .skills
 
             width: 100%
 
-            display: grid
-            grid-template-columns: repeat(1, 1fr)
-            justify-items: center
+            display: flex
+            flex-direction: row
             align-items: center
+            justify-content: center
 
             img
 
-                height: 50%
-                width: auto
+                padding: 10px
+                width: 30%
                 background-position: center
                 background-size: cover
 
     .footer
 
-        padding: 2rem 0px
+        padding: 5rem 0px
 
         display: flex
         flex-direction: row
@@ -86,7 +93,7 @@
 
             padding: 10px
             text-decoration: none
-            color: black
+            color: $text-color
 
             font-size: 100%
             font-family: sans-serif
